[gd_scene load_steps=6 format=3 uid="uid://crgynbxlgkicu"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_qy7nj"]
[ext_resource type="Theme" uid="uid://dw8bd56pouxai" path="res://UI/game_theme.tres" id="2_sl2p7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxll6"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.407843, 0.686275, 0.254902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.141176, 0.384314, 0.984314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="FontFile" id="FontFile_4p11q"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4re8"]
bg_color = Color(0.0862745, 0.403922, 0.917647, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0.737255, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qy7nj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = -179.5
offset_right = 151.5
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sxll6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_sl2p7")
theme_override_colors/font_color = Color(0.0156863, 0.34902, 0.929412, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = SubResource("FontFile_4p11q")
text = "Paused"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_sl2p7")
theme_override_colors/font_color = Color(0, 0.615686, 0.0392157, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = SubResource("FontFile_4p11q")
theme_override_styles/normal = SubResource("StyleBoxFlat_q4re8")
text = "Restart"

[node name="QuitToMain" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_sl2p7")
theme_override_colors/font_color = Color(0, 0.615686, 0.0392157, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = SubResource("FontFile_4p11q")
theme_override_styles/normal = SubResource("StyleBoxFlat_q4re8")
text = "Quit to Main Menu"

[node name="QuitGame" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("2_sl2p7")
theme_override_colors/font_color = Color(0, 0.615686, 0.0392157, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = SubResource("FontFile_4p11q")
theme_override_styles/normal = SubResource("StyleBoxFlat_q4re8")
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitToMain" to="." method="_on_quit_to_main_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
